; ModuleID = '/home/carl/AnghaBench/vlc/src/audio_output/extr_volume.c_aout_volume_Delete.c'
source_filename = "/home/carl/AnghaBench/vlc/src/audio_output/extr_volume.c_aout_volume_Delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32*, i32 }

@.str = private unnamed_addr constant [23 x i8] c"audio-replay-gain-mode\00", align 1
@ReplayGainCallback = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @aout_volume_Delete(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = icmp eq %struct.TYPE_4__* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %28

7:                                                ; preds = %1
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 1
  store i32* %9, i32** %3, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %7
  %15 = load i32*, i32** %3, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = call i32 @module_unneed(i32* %15, i32* %18)
  br label %20

20:                                               ; preds = %14, %7
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @vlc_object_parent(i32* %21)
  %23 = load i32, i32* @ReplayGainCallback, align 4
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %25 = call i32 @var_DelCallback(i32 %22, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %23, %struct.TYPE_4__* %24)
  %26 = load i32*, i32** %3, align 8
  %27 = call i32 @vlc_object_delete(i32* %26)
  br label %28

28:                                               ; preds = %20, %6
  ret void
}

declare dso_local i32 @module_unneed(i32*, i32*) #1

declare dso_local i32 @var_DelCallback(i32, i8*, i32, %struct.TYPE_4__*) #1

declare dso_local i32 @vlc_object_parent(i32*) #1

declare dso_local i32 @vlc_object_delete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
